# bytes-transfer-compare

./: Makefile  ws.code-workspace
kafka/: docker-compose.yaml
kafka/consumer-py/: pyproject.toml
kafka/consumer-py/src/: start.py
kafka/consumer/src/: main.rs
kafka/producer/: pyproject.toml
kafka/producer/src/: start.py
rabbitmq/: docker-compose.yaml
rabbitmq/consumer-py/: pyproject.toml
rabbitmq/consumer-py/src/: start.py
rabbitmq/consumer/src/: main.rs
rabbitmq/producer/src/: start.py
redis-old/get/: Dockerfile
redis-old/set/: Dockerfile
redis-set-get/: docker-compose.yaml
redis-set-get/get/: Dockerfile
redis-set-get/set/: Dockerfile
redis-set-get/set/src/: start.py
shared-memory/: docker-compose.yaml
shared-memory/read/: Cargo.toml
shared-memory/read/src/: main.rs
shared-memory/write/: Dockerfile
shared-memory/write-rust/: Cargo.toml
shared-memory/write-rust/src/: main.rs
shared-memory/write/src/: start.py
shared-volumes/: docker-compose.yaml
shared-volumes/read/src/: main.rs
shared-volumes/write/: pyproject.toml
shared-volumes/write/src/: start.py
